--- a/AzureFunctions/SampleFunctions/local.settings.sample.json
+++ b/AzureFunctions/SampleFunctions/local.settings.sample.json
@@ -4,6 +4,7 @@
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "queueconstring": "Endpoint=sb://myservicebusqueue.servicebus.windows.net/;SharedAccessKeyName=receiver;SharedAccessKey=*******************",
-    "AzureWebJobs.TimerTriggeredFunction.Disabled": true
+    "AzureWebJobs.TimerTriggeredFunction.Disabled": true,
+    "EventHubConnectionAppSetting": "Endpoint=sb://sample.servicebus.windows.net/;SharedAccessKeyName=sender;SharedAccessKey=***************"
   }
 }
